--- a/signin.html
+++ b/signin.html
@@ -36,12 +36,11 @@
             <h2>Welcome</h2>
             <div class="input_box">
               <input type="email" placeholder="Enter your email" />
-              <!-- <i class="fa-regular fa-envelope"></i> -->
+              <i class="fa-regular fa-envelope box"></i>
             </div>
             <div class="input_box">
               <input type="password" placeholder="Enter your password" />
-              <!-- <i class="fa-solid fa-lock"></i>
-              <i class="fa-solid fa-eye-slash"></i> -->
+              <i class="fa-solid fa-lock box"></i>
             </div>
 
             <div class="option_field">
