--- a/signup.html
+++ b/signup.html
@@ -35,18 +35,16 @@
           <form action="#">
             <h2>Get Started</h2>
             <div class="input_box">
-              <input type="email" placeholder="Enter your email" />
-              <!-- <i class="fa-regular fa-envelope"></i> -->
+              <input type="email left" placeholder="Enter your email" />
+              <i class="fa-regular fa-envelope box box"></i>
             </div>
             <div class="input_box">
-              <input type="password" placeholder="Create password" />
-              <!-- <i class="fa-solid fa-lock"></i>
-                <i class="fa-solid fa-eye-slash"></i> -->
+              <input type="password left" placeholder="Create password" />
+              <i class="fa-solid fa-lock box"></i>
             </div>
             <div class="input_box">
-              <input type="password" placeholder="Confirm your password" />
-              <!-- <i class="fa-solid fa-lock"></i>
-                <i class="fa-solid fa-eye-slash"></i> -->
+              <input type="password left" placeholder="Confirm your password" />
+              <i class="fa-solid fa-lock box"></i>
             </div>
 
             <button class="button">Sign Up</button>
